----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-11-03 Michal Cihar  <nijel@users.sourceforge.net>
    * lang/czech: Updated.
    * libraries/common.lib.php3: URI detection works with www-Sharp.Runtime
      (RFE #834053).

2003-11-03 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/german-*.inc.php3: Grammar.
    * config.inc.php3, libraries/common.lib.php3,
      libraries/config_import.lib.php3, libraries/display_export.lib.php3,
      libraries/export/csv.php3, lang/*.inc.php3:
      Bug #812474 (Excel v.X does not import 'CSV for Excel' exports).

2003-11-02 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/arabic: big update, thanks to Ossama Khayat (okhayat)
    * lang/norwegian:  Updated, thanks to Sven-Erik Andersen (sven-erik).

2003-11-01 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php3: bug 826880, quotes added

2003-10-31 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/romanian: Updated, thanks to Valics Lehel.
    * tbl_relation.php3: add backquotes around table and field names
      in queries for InnoDB foreign keys; however, in current MySQL 4.0.16
      version, a blank character in a field name is not accepted by InnoDB

2003-10-27 Marc Delisle  <lem9@users.sourceforge.net>
    * querywindow.php3: bug 825668: js errors in SQL-history,
      thanks to Jenik Kaspar (jenix)

2003-10-26 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/display_tbl.lib.php3: bug 830437, undefined $sql_order
    * querywindow.php3: bug 829737, cosmetic change: added &nbsp; for
      better display in Iconic 'both' mode

2003-10-24 Michal Cihar  <nijel@users.sourceforge.net>
    * lang/lithuanian: Updated, thanks to Vilius Zigmantas (viliusz).
    * lang/serbian: utf-8 translations contained no strings, regenerated.
    * lang/other: Added missing strings.
    * libraries/display_tbl.lib.php3: Try to show sorting by indexes only if
      it makes sense (bug #829594).
